// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 1`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 2,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": [],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 2`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 3,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": [
    {
      "accountDeactivated": false,
      "accountType": "legacy",
      "defaultMessage": null,
      "email": "user@ubc.ca",
      "emailVerified": true,
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "lastName": "Person",
      "name": "User Person",
      "photoURL": "https://example.com",
      "readChangeLog": false,
      "sid": null,
      "userRole": "user",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets all queues that are not disabled (prof) 3`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 4,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": null,
  "queueSize": 0,
  "room": "room 4",
  "staffList": [
    {
      "accountDeactivated": false,
      "accountType": "legacy",
      "defaultMessage": null,
      "email": "user@ubc.ca",
      "emailVerified": true,
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "lastName": "Person",
      "name": "User Person",
      "photoURL": "https://example.com",
      "readChangeLog": false,
      "sid": null,
      "userRole": "user",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets office hours no queues, since no queue is happening right now 1`] = `
{
  "asyncQuestionDisplayTypes": [],
  "coordinator_email": null,
  "courseInviteCode": "invite-code",
  "crns": [],
  "deletedAt": null,
  "enabled": true,
  "heatmap": false,
  "icalURL": "https://calendar.google.com/calendar/ical/t6lu2pic7u9otrbpkuk26sl34g%40group.calendar.google.com/public/basic.ics",
  "id": 1,
  "name": "CS 304",
  "organizationCourse": null,
  "questionTimer": null,
  "queues": [],
  "sectionGroupName": "001",
  "selfEnroll": false,
  "semesterId": 1,
  "superCourseId": null,
  "timezone": "America/New_York",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 1`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 2,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 2",
  "staffList": [],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 2`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 3,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "room 3",
  "staffList": [
    {
      "accountDeactivated": false,
      "accountType": "legacy",
      "defaultMessage": null,
      "email": "user@ubc.ca",
      "emailVerified": true,
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "lastName": "Person",
      "name": "User Person",
      "photoURL": "https://example.com",
      "readChangeLog": false,
      "sid": null,
      "userRole": "user",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration GET /courses/:id gets queues that are not disabled (TA) 3`] = `
{
  "allowQuestions": false,
  "config": {},
  "id": 4,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": null,
  "queueSize": 0,
  "room": "room 4",
  "staffList": [
    {
      "accountDeactivated": false,
      "accountType": "legacy",
      "defaultMessage": null,
      "email": "user@ubc.ca",
      "emailVerified": true,
      "firstName": "User",
      "id": 2,
      "includeDefaultMessage": true,
      "lastName": "Person",
      "name": "User Person",
      "photoURL": "https://example.com",
      "readChangeLog": false,
      "sid": null,
      "userRole": "user",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/checkin/:qid checks a TA into an existing queue 1`] = `
{
  "allowQuestions": true,
  "config": {},
  "id": 1,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": null,
  "queueSize": 0,
  "room": "Online",
  "staffList": [
    {
      "accountDeactivated": false,
      "accountType": "legacy",
      "defaultMessage": null,
      "email": "user@ubc.ca",
      "emailVerified": true,
      "firstName": "User",
      "id": 1,
      "includeDefaultMessage": true,
      "lastName": "Person",
      "name": "User Person",
      "photoURL": "https://example.com",
      "readChangeLog": false,
      "sid": null,
      "userRole": "user",
    },
  ],
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 1`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": "example note 1",
  "queueSize": 0,
  "room": "abcd1",
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 2`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": true,
  "notes": "example note 7",
  "queueSize": 0,
  "room": "abcd2",
  "type": "hybrid",
  "zoomLink": null,
}
`;

exports[`Course Integration POST /courses/:id/create_queue/:room correctly propagates notes,profq,and name 3`] = `
{
  "allowQuestions": true,
  "config": {},
  "courseId": Any<Number>,
  "id": Any<Number>,
  "isDisabled": false,
  "isProfessorQueue": false,
  "notes": "ta queue",
  "queueSize": 0,
  "room": "abcd3",
  "type": "hybrid",
  "zoomLink": null,
}
`;
